<resources>
    <string name="app_name">Class List</string>
    <string name="action_settings">Settings</string>
    <string name="loading_name">Loading</string>
    <string name="choose_class">Choose class:</string>
    <string name="no_classes">You have no saved classes</string>
    <string name="enter_class">Enter class name</string>
    <string name="text_too_long">Name is too long</string>
    <string name="name_exists">Name already exists</string>
    <string name="enter_student">Enter student name</string>
    <string name="dialog_resize">Resize</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_keep">Keep</string>
    <string name="dialog_set">Set</string>
    <string name="file_load_fail">Failed to load file: check your storage settings</string>
    <string name="file_save_fail">Failed to save file: Check your storage settings</string>
    <string name="choose_list">Choose list:</string>
    <string name="no_lists">You have no saved lists</string>
    <string name="enter_list">Enter list name</string>
    <string name="spinner_add_class">Add new class…</string>
    <string name="spinner_select_class">Select a class…</string>
    <string name="invalid_name">Invalid name</string>
    <string name="no_list_open">Open a list with the yellow button, or manage your classes with the blue button</string>
    <string name="class_list_name">%1$s: %2$s</string>
    <string name="enter_comment">Enter comments</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>
    <string name="action_header">Action</string>

    <!-- Display Preferences -->
    <string name="font_title">Font size</string>
    <string name="display_theme">Theme</string>

    <!-- Action Preferences -->
    <string name="confirm_checkbox_title">Checkbox confirmation</string>
    <string name="confirm_checkbox_summary">Ask before checking or unchecking</string>
</resources>
