<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/display_header">

        <ListPreference
                app:key="font_size"
                app:title="@string/font_title"
                app:entries="@array/font_size_entries"
                app:entryValues="@array/font_size_values"
                app:defaultValue="14"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="display_theme"
                app:title="@string/display_theme"
                app:entries="@array/display_theme_entries"
                app:entryValues="@array/display_theme_values"
                app:defaultValue="-1"
                app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/action_header">

        <CheckBoxPreference
                app:key="confirm_checkbox"
                app:title="@string/confirm_checkbox_title"
                app:summary="@string/confirm_checkbox_summary"
                app:defaultValue="false"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>
</PreferenceScreen>
