<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewClassActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_class" android:id="@+id/classInput"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_confirmAddClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_check_black_24dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:tint="#FFFFFF" app:backgroundTint="#FFC107"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:visibility="invisible"/>
    <TextView
            android:text="@string/text_too_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textColor="@color/red" android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" android:layout_marginStart="2dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="72dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nameInput"
                    android:hint="@string/enter_student"
                    android:autofillHints="" tools:targetApi="o"
                    android:layout_marginEnd="64dp" android:layout_marginStart="8dp" android:gravity="start|top"/>
            <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp" android:id="@+id/button2"
                    android:background="@drawable/ic_add_black_24dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:layout_marginEnd="8dp"
                    android:layout_gravity="top|end" android:layout_marginTop="-48dp"/>
            <TextView
                    android:text="@string/text_too_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    android:textColor="@color/red" android:visibility="invisible"
                    android:layout_marginStart="10dp"/>
            <TextView
                    android:text="@string/loading_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:textSize="18sp"
                    android:layout_marginStart="8dp" android:layout_marginTop="-64dp" android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>