<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OpenClassActivity">

    <TextView
            android:text="@string/choose_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/no_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"
            android:id="@+id/scrollView2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/linearLayout1">
            <Button
                    android:text="@string/loading_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    android:layout_marginTop="0dp" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" style="@style/Widget.AppCompat.Button" android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_newClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:tint="#FFFFFF" app:backgroundTint="#FFC107"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>